--- a/src/config/version.h.in
+++ b/src/config/version.h.in
@@ -2,7 +2,7 @@
 #define STR(x) STR_HELPER(x)
 
 #define PROJECT_NAME "P1652"
-#define PROJECT_SITE "http://www.turtlecoin.lol"
+#define PROJECT_SITE "http://www.p1652.xyz"
 #define PROJECT_COPYRIGHT "Copyright 2021-2022, Pine Tree Shilling 1652 developers"
 #define APP_VER_MAJOR 0
 #define APP_VER_MINOR 0
